--- a/canvas.html
+++ b/canvas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="utf-8">
     <style>
       body {
         margin: 0px;
@@ -9,15 +10,22 @@
     </style>
   </head>
   <body>
-    <canvas id="myCanvas" width="800" height="600"></canvas>
+    <canvas id="myCanvas" width="830" height="600"></canvas>
     <script>
+      var sitzPlaetze = [
+        [{id: 1}, {id: 2}, {id: 3}],
+        [{id: 4}, {id: 5}, {id: 5}],
+      ];
+      var reihen = sitzPlaetze.length;
+      var plaetze = reihen > 0 ? sitzPlaetze[0].length : 0;
+
       var canvas = document.getElementById('myCanvas');
       var context = canvas.getContext('2d');
 
       var xbase = 10;
       var ybase = 10;
-      var width = 600;
-      var height = 60;
+      var width = (reihen * 10);
+      var height = (plaetze * 10);
 
       context.beginPath();
       context.rect(xbase, ybase, xbase + width, ybase + height);
@@ -27,6 +35,15 @@
       context.lineWidth = 2;
       context.strokeStyle = '#666666';
       context.stroke();
+
+      context.beginPath();
+      context.rect(xbase + 3, ybase + 3, xbase + 6, ybase + 6);
+      context.lineWidth = 1;
+      context.strokeStyle = '#000000';
+      context.stroke();
+      context.fillStyle = '#e26060';
+      context.fill();
+
     </script>
   </body>
 </html>      
