--- a/canvas.html
+++ b/canvas.html
@@ -27,7 +27,7 @@
       var context = canvas.getContext('2d');
 
       var border = 2
-      var padding = 10;
+      var padding = 5;
       var recSize = 20;
       var recSpace = recSize + padding;
       var xbase = 10;
@@ -70,6 +70,14 @@
             context.strokeStyle = '#000000';
             context.stroke();
             context.fillStyle = '#e26060';
+            context.fill();
+            context.beginPath();
+            var centerOffet = (recSize/2);
+            var xOffset = sitzPlatz.fr ? recSize : 0;
+            context.moveTo(x + xOffset, y);
+            context.quadraticCurveTo(x + centerOffet, y + centerOffet, x + xOffset, y + recSize);
+            context.stroke();
+            context.fillStyle = '#666666';
             context.fill();
           }
         }
