--- a/canvas.html
+++ b/canvas.html
@@ -46,9 +46,12 @@
           var reihe = sitzPlaetze[r];
           for(var p = 0; p < reihe.length; p++) {
             var sitzPlatz = reihe[p];
-            var red = parseInt(( 1.0 - sitzPlatz.z) * 255);
-            var green = parseInt(sitzPlatz.z * 255);
-            var sitzFarbe = 'rgb(' + red +  ', ' + green + ', 0)';
+            sitzFarbe = '#fff'
+            if(sitzPlatz.z >= 0) {
+              var red = parseInt(( 1.0 - sitzPlatz.z) * 255);
+              var green = parseInt(sitzPlatz.z * 255);
+              sitzFarbe = 'rgb(' + red +  ', ' + green + ', 0)';
+            }
             if(sitzPlatz.id > 0) {
               var recX = xbase + (r*recSpaceX);
               var recY = ybase + ((reihe.length - 1) * recSpaceY) - (p*recSpaceY);
@@ -113,8 +116,8 @@
       var sitzPlaetze = [
         [{id: 1, fr: true, a: false, z: 0.8}, {id: 2, fr: true, a: false, z: 0.6}, {id: 3, fr: true, a: false, z: 0}, {id: 4, fr: true, a: false, z: 1.0}],
         [{id: 5, fr: true, a: false, z: 1.0}, {id: 6, fr: true, a: false, z: 1.0}, {id: 7, fr: true, a: false, z: 1.0}, {id: 8, fr: true, a: false, z: 1.0}],
-        [{id: 9, fr: false, a: false, z: 1.0}, {id:10, fr: false, a: false, z: 1.0}, {id:11, fr: false, a: false, z: 1.0}, {id:12, fr: false, a: false, z: 1.0}],
-        [{id:13, fr: false, a: false, z: 1.0}, {id:14, fr: false, a: false, z: 1.0}, {id:15, fr: false, a: false, z: 1.0}, {id:16, fr: false, a: false, z: 1.0}],
+        [{id: 9, fr: false, a: false, z: -1}, {id:10, fr: false, a: false, z: 1.0}, {id:11, fr: false, a: false, z: 1.0}, {id:12, fr: false, a: false, z: 1.0}],
+        [{id:13, fr: false, a: false, z: -1}, {id:14, fr: false, a: false, z: 1.0}, {id:15, fr: false, a: false, z: 1.0}, {id:16, fr: false, a: false, z: 1.0}],
         [{id:-1}, {id:18, fr: false, a: true, z: 1.0}, {id:19, fr: false, a: true, z: 0.9}, {id:20, fr: false, a: true, z: 0.2}],
         [{id:-1}, {id:22, fr: true, a: true, z: 1.0}, {id:23, fr: true, a: true, z: 0.4}, {id:124, fr: true, a: true, z: 1.0}]
       ];
