--- a/src/main/resources/report/generation.html
+++ b/src/main/resources/report/generation.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="default.css">
     <script src="wagon.js"></script>
+    <script src="${templateName}.js"></script>
   </head>
   <body>
     <canvas id="myCanvas" width="830" height="600"></canvas>
