--- a/src/main/resources/report/index.html
+++ b/src/main/resources/report/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="default.css">
     <script src="wagon.js"></script>
-    <script src="index.js"></script>
+    <script src="${templateName}.js"></script>
   </head>
   <body>
     <h1>Ergebnisse</h1>
