--- a/src/main/resources/report/index.html
+++ b/src/main/resources/report/index.html
@@ -9,6 +9,10 @@
   <body>
     <h1>Ergebnisse</h1>
     <h2>Start</h2>
+    <canvas id="startWagon" width="830" height="200"></canvas>
+    <script>
+      wagon.zeichnen('startWagon', 0, 0, data.startWagon);
+  </script>
     <h2>Ende</h2>
     <b>Generation: <%=generation %></b>
     <h2>Generationen</h2>
