--- a/src/main/resources/report/generation.html
+++ b/src/main/resources/report/generation.html
@@ -13,6 +13,7 @@
   <script>
       wagon.zeichnen('wagon_$i', 0, 0, data.wagon_$i);
   </script>
+  Zufriedenheit: <%=w.zufriedenheit %>
   <% } %>
   </body>
 </html>      
