--- a/src/main/resources/report/index.html
+++ b/src/main/resources/report/index.html
@@ -14,11 +14,13 @@
     <script>
       wagon.zeichnen('startWagon', 0, 0, data.startWagon);
   </script>
+    Zufriedenheit: <%=startWagon.zufriedenheit %> (maximal: <%=startWagon.maximaleZufriedenheit %>)
     <h2>Ende</h2>
     <canvas id="besterWagon" width="2000" height="200"></canvas>
     <script>
       wagon.zeichnen('besterWagon', 0, 0, data.besterWagon);
   </script>
+    Zufriedenheit: <%=generation.besteWagonBelegung.zufriedenheit %>
     <h2>Generationen</h2>
     <ul>
     <% generationen.each { g -> %>
