--- a/src/main/resources/report/generation.html
+++ b/src/main/resources/report/generation.html
@@ -8,12 +8,13 @@
   </head>
   <body>
 
-  <% generation.wagonBelegungen.eachWithIndex { w, i -> %>
+  <% ctx.generation.wagonBelegungen.eachWithIndex { w, i -> %>
   <canvas id="wagon_$i" width="2000" height="200"></canvas>
   <script>
       wagon.zeichnen('wagon_$i', 0, 0, data.wagon_$i);
   </script>
   Zufriedenheit: <%=w.zufriedenheit %>
+  <a href="belegung_${ctx.generation.name}.html">Belegung</a>
   <% } %>
   </body>
 </html>      
