--- a/src/main/resources/report/generation.html
+++ b/src/main/resources/report/generation.html
@@ -14,7 +14,7 @@
       wagon.zeichnen('wagon_$i', 0, 0, data.wagon_$i);
   </script>
   Zufriedenheit: <%=w.zufriedenheit %>
-  <a href="belegung_${ctx.generation.name}.html">Belegung</a>
+  <a href="belegung_${ctx.generation.name}_${i}.html">Belegung</a>
   <% } %>
   </body>
 </html>      
