--- a/src/main/resources/report/index.html
+++ b/src/main/resources/report/index.html
@@ -21,6 +21,7 @@
       wagon.zeichnen('besterWagon', 0, 0, data.besterWagon);
   </script>
     Zufriedenheit: <%=ctx.generation.besteWagonBelegung.zufriedenheit %>
+    <a href="belegung.html">Belegung</a>
     <h2>Generationen</h2>
     <ul>
     <% ctx.generationen.each { g -> %>
