--- a/src/main/resources/report/algorithmus/generation.html
+++ b/src/main/resources/report/algorithmus/generation.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="default.css">
-    <script src="wagon.js"></script>
+    <link rel="stylesheet" type="text/css" href="../default.css">
+    <script src="../wagon.js"></script>
     <script src="${templateName}.js"></script>
   </head>
   <body>
